# apidoctor

./: Cargo.toml  Dockerfile  LICENSE  README.md  petstore.json
.github/workflows/: action.yml  ci.yml  publish.yml
src/: main.rs
src/examples/: mod.rs
src/openapi/: linting.rs  metadata.rs  mod.rs  operations.rs
src/reporting/: mod.rs
