[package]
name = "apidoctor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
main_error = "0.1"
structopt = "0.3"
openapiv3 = "0.5"
openssl = {version = "0.10", features = ["vendored"]}
jsonschema = "0.13"
serde_json = "1.0"
serde_yaml = "0.8"
indexmap = "1.7"
nonempty = "0.7.0"
mime = "0.3"
regex = "1.5"
futures = "0.3"

[dev-dependencies]
tempdir = "0.3"